ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rupesh-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      name: rupesh-pod
      labels:
        app: web
    spec:
      containers:
        - name: app
          image: rupeshsaini09/farm-website
