ingress/httpd-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      name: httpd-pod
      labels:
        app: httpd
    spec:
      containers:
        - name: httpd-app
          image: httpd
