ingress/prince-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prince-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prince
  template:
    metadata:
      name: prince-pod
      labels:
        app: prince
    spec:
      containers:
        - name: prince-app
          image: princenarula00/gymwork
